# 4.Semester

./: .gitignore  .gitmodules  4.Semester.componentinfo.xml  4.Semester.cproj  CMakelists.txt  Dockerfile  LoRaWANHandler.c  UML begyndelse  Wrapper.c  co2.h  co2impl.c  main.c  readme.txt
.github/workflows/: run-tests.yml
Debug/: 4.Semester.elf  4.Semester.hex  4.Semester.lss  4.Semester.map  4.Semester.srec  Makefile  main.d  makedep.mk
InterfaceWrapper/: Wrapper.h
src/: SensorData.h
src/DataCollection/: Datacollection.c  dataCollection.h
src/Wrapper/: Wrapper.c  Wrapper.h
src/handlers/: LoRaWANHandler.c
src/handlers/HumidityHandler/: humidityHandler.c  humidityHandler.h
src/handlers/HumidityHandler/interface/: humidityHandler.h
src/handlers/co2Handler/: co2Handler.c  co2Handler.h
src/handlers/co2Handler/interface/: co2Handler.h
src/handlers/servoHandler/: servoHandler.c  servoHandler.h
src/handlers/temperturHandler/: temperturHandler.c  temperturHandler.h
src/handlers/temperturHandler/interface/: temperturHandler.h
src/implementation/co2Impl/: co2.h  co2impl.c  mh_z19.h  serial.h
src/implementation/humidityImpl/: humidityImpl.c  humidityImpl.h
src/implementation/servo/: servoImpl.c  servoImpl.h
src/implementation/tempImpl/: temperaturImpl.c  temperaturImpl.h
src/implementation/tempImpl/delay_hal/: delay_hal.c  delay_hal.h
test/: CMakeLists.txt  servoTest.cpp  test_production.cpp
